244Initials/force-app/main/default/objects/ARTL_Pincode__c/ARTL_Pincode__c.object-meta.xml
<CustomObject>
    <label>Pincode</label>
    <nameField>
        <label>Pincode Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Pincode</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>