244Initials/force-app/main/default/objects/ARTL_Pincode__c/fields/ARTL_Circle__c.field-meta.xml
<CustomField>
    <fullName>ARTL_Circle__c</fullName>
    <label>Circle</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>AP</fullName>
            </value>
            <value>
                <fullName>Bihar</fullName>
            </value>
            <value>
                <fullName>GUJ</fullName>
            </value>
            <value>
                <fullName>International</fullName>
            </value>
            <value>
                <fullName>KK</fullName>
            </value>
            <value>
                <fullName>KTN</fullName>
            </value>
            <value>
                <fullName>MPCG</fullName>
            </value>
            <value>
                <fullName>MUM</fullName>
            </value>
            <value>
                <fullName>NCR</fullName>
            </value>
            <value>
                <fullName>NESA</fullName>
            </value>
            <value>
                <fullName>RAJ</fullName>
            </value>
            <value>
                <fullName>ROM</fullName>
            </value>
            <value>
                <fullName>UN</fullName>
            </value>
            <value>
                <fullName>UPE</fullName>
            </value>
            <value>
                <fullName>UPW</fullName>
            </value>
            <value>
                <fullName>WBO</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>