244Initials/force-app/main/default/objects/ARTL_Pincode__c/fields/ARTL_City__c.field-meta.xml
<CustomField>
    <fullName>ARTL_City__c</fullName>
    <label>City</label>
    <length>80</length>
    <type>Text</type>
</CustomField>