244Initials/force-app/main/default/objects/ARTL_Pincode__c/fields/ARTL_Country__c.field-meta.xml
<CustomField>
    <fullName>ARTL_Country__c</fullName>
    <label>Country</label>
    <length>80</length>
    <type>Text</type>
</CustomField>